# aeroflow

./: .env.example  .gitignore  README.md  ingestion_script.sh  main.py  test_local_ingestion.py
data/: ingestion.db
docs/: notifications.md
feature-engineering/: README.md  daily_report_script.sh  main.py  pyproject.toml
feature-engineering/data/features/: features_2025-12-28.parquet
feature-engineering/src/features/: __init__.py  analyze.py  config.py  daily_report.py
feature-engineering/src/features/data/: __init__.py  cleaning.py  data_loader.py
feature-engineering/src/features/report/: __init__.py  report_generator.py  report_uploader.py  slack_notifier.py  visualization.py
feature-engineering/src/pipeline/: __init__.py  features.py  run.py
feature-engineering/src/train_sample/: __init__.py  train.py
ingestion/: README.md  ingestion_script.sh  pyproject.toml
ingestion/data/: ingestion.db
ingestion/docs/: ingestion.md
ingestion/src/ingestion/components/: __init__.py  client.py  s3_uploader.py
ingestion/src/ingestion/config/: __init__.py  config.py
ingestion/src/ingestion/db/: __init__.py
ingestion/src/ingestion/jobs/: __init__.py  scheduler.py
ingestion/src/notifications/: config.py  slack.py
ingestion/src/utils/: __init__.py  exceptions.py
ingestion/tests/pipeline/: test_failure_capture.py  test_s3_ingestion.py  test_states_ingestion.py
model-training/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  train_script.sh
src/ingestion/: __init__.py
src/notifications/: __init__.py  config.py  (+3 more)
(+14 files in other folders)
