[project]
name = "services"
version = "0.1.0"
description = "Flights Forecasting pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars",
    "boto3",
    "pyarrow",
    "httpx",
    "python-dotenv",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "apscheduler>=3.11.1",
]

[tool.uv]
dev-dependencies = [
    "jupyter",
    "pytest",
    "ruff"
]
